--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "One Dark Pro",
+    "workbench.colorTheme": "Default Light+",
     "editor.fontSize": 13,
     "terminal.integrated.fontSize": 13,
     "editor.fontLigatures": true,
