--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "build-lib": "fable-splitter -c src/Lib/splitter.config.js",
-    "build": "webpack",
-    "start": "webpack-dev-server",
+    "build": "dotnet fable src/App --run webpack",
+    "start": "dotnet fable watch src/App --run webpack-dev-server",
     "deploy": "gh-pages -d deploy"
   },
   "dependencies": {
@@ -21,11 +21,8 @@
     "bulma-tooltip": "^3.0.2",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
-    "fable-compiler": "^2.10.1",
-    "fable-loader": "^2.1.9",
-    "fable-metadata": "^1.5.0",
-    "fable-splitter": "^2.2.0",
-    "fable-standalone": "^1.3.16",
+    "fable-metadata": "^2.0.0",
+    "fable-standalone": "^3.0.0-nagareyama-rc-008",
     "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.3.0",
