--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,9 @@
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Default Light+",
     "editor.fontSize": 13,
     "terminal.integrated.fontSize": 13,
     "editor.fontLigatures": true,
-    "editor.fontFamily": "JetBrains Mono, Consolas, 'Courier New', monospace",
+    "editor.fontFamily": "JetBrains Mono Light, Consolas, 'Courier New', monospace",
     "gitlens.codeLens.enabled": false
 }
