--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "fable-metadata": "^2.0.0",
-    "fable-standalone": "^3.0.0-nagareyama-rc-008",
+    "fable-standalone": "3.0.0",
     "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.3.0",
