--- a/src/Fable.Repl.Lib/Elmish.Snabbdom/Elmish.Snabbdom.fsproj
+++ b/src/Fable.Repl.Lib/Elmish.Snabbdom/Elmish.Snabbdom.fsproj
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0</Version>
@@ -18,5 +19,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Feliz.Snabbdom\Feliz.Snabbdom.fsproj" />
   </ItemGroup>
-
+  <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
