--- a/src/Fable.Repl.Lib/Feliz.Snabbdom/Feliz.Snabbdom.fsproj
+++ b/src/Fable.Repl.Lib/Feliz.Snabbdom/Feliz.Snabbdom.fsproj
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0</Version>
@@ -19,4 +20,5 @@
   <!-- <ItemGroup>
     <ProjectReference Include="..\..\..\Feliz.Engine\src\Feliz.Engine.Event\Feliz.Engine.Event.fsproj" />
   </ItemGroup> -->
+  <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
