--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@fable-org/fable-metadata": "^1.0.0-beta-001",
+    "@fable-org/fable-standalone": "^1.0.0-beta-001",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@types/lz-string": "^1.3.34",
     "autoprefixer": "^10.4.16",
@@ -10,8 +12,6 @@
     "bulma-pageloader": "^2.2.0",
     "bulma-switch": "^2.0.4",
     "bulma-tooltip": "^3.0.2",
-    "fable-metadata": "^2.2.0",
-    "fable-standalone": "^3.8.0",
     "gh-pages": "^6.0.0",
     "lz-string": "^1.5.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
