--- a/js/repl/fable-library-js/package.json
+++ b/js/repl/fable-library-js/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "type": "module",
   "name": "@fable-org/fable-library-js",
-  "version": "1.1.1",
+  "version": "1.0.0-beta-001",
   "description": "Core library used by F# projects compiled with fable.io",
   "author": "Fable Contributors",
   "license": "MIT",
